# NSCLDAQ

./: .gitignore  .gitmodules  Home.md  S800---LENDA---Gretina.md  nscldaq
main/: 11.1-conversion.files  11.1-conversion.includes  11.1-maint.files  11.1-maint.includes  AUTHORS  ChangeLog  Makefile.am  README  config_pixie16api.h  configure.ac  daqsetup.bash.in  nscldaq.in  tcl++incorp  tcl++incorp.sh  testBuildTarball  unifiedfmt-incorp.sh
main/base/: Makefile.am
main/base/CopyrightTools/: CopyrightNotice.h  License.txt  Makefile.am  copyrightnotice.xml
main/base/cvt/: cvtdoc.xml  daqcvt.h
main/base/dataflow/: CRemoteAccess.cpp  CRemoteAccess.h  CRingBuffer.cpp  CRingBuffer.h  CRingCommand.h  CRingMaster.cpp  CRingMaster.h  CZCopyRingBuffer.cpp  CZCopyRingBuffer.h  Makefile.am  RingMaster.tcl  TestRunner.cpp  consumer.cpp  producer.cpp  ringbuffer.tcl  ringbuffer_man.xml  ringbufint.h  ringlib.xml  ringmaster.xml  ringpipes.xml  ringprimitives.xml  ringtostdout.cpp  ringtostdoutsw.ggo  ringtostdoutsw.h  ringutils.tcl  stdintoring.cpp  stdintoringTests.cpp  stdintoringUtils.cpp  stdintoringUtils.h  stdintoringsw.h  tclring.xml  testcommon.h
main/base/factories/: CCreator.h  CExtensibleFactory.h  Makefile.am  refman.xml
main/base/headers/: Makefile.am  Refptr.h  buffer.h  buftypes.h  daqdatatypes.h
main/base/iniparser/: Makefile.am  dictionary.h  iniparser.h
main/base/os/: CBufferedOutput.cpp  CBufferedOutput.h  CElapsedTime.cpp  CElapsedTime.h  CPagedOutput.cpp  CPagedOutput.h  CPosixBlockingRecordLock.cpp  CPosixBlockingRecordLock.h  CRingBlockReader.cpp  CRingBlockReader.h  CRingFileBlockReader.cpp  CRingFileBlockReader.h  CSemaphore.cpp  CSemaphore.h  Makefile.am  NSCLDAQLog.cpp  NSCLDAQLog.h  TestRunner.cpp  closeunusedtests.cpp  daqshm.cpp  daqshm.h  eltest.cpp  io.cpp  io.h  logtest.cpp  os.cpp  poutputtests.cpp  semaphoretests.cpp  shm.xml  testBufferedOutput.cpp  testiov.cpp  utils.cpp  utils.h
main/base/plotcontainer/: Makefile.am  plotcontainer.xml  series.tcl  series.test  xyplot.tcl
main/base/pugi/: Makefile.am
main/base/security/: AccessListCheck.h  Authenticator.h  FdInteractor.h  HostListCheck.h  IOInteractor.h  Interactor.h  Makefile.am  PasswordCheck.h  StringInteractor.h  TclAccessListCheck.cpp  UnixUserCheck.h  security.xml
main/base/sqliteplus/: CSqliteStatement.h  Makefile.am
main/base/tclutils/: Log.tcl  Makefile.am  Orphan.tcl  Process.tcl  Process.xml  TclSourceFilter.xml  UniqueInstance.tcl  Utils.tcl  Utils.xml  WaitPackage.cpp  elimTclLibpath.tcl  ssh.tcl  tclTests.tcl  versionUtils.tcl  versionutils.test  wait.test  waitPackage.xml
main/base/tclwidgets/: ChannelLabel.tcl  Frames.xml  Makefile.am  NSCLBgerror.tcl  OutputWindow.tcl  RingStatus.xml  ScaleControl_man.xml  blockimage.tcl  dialogwrapper.tcl  icon.tcl  nsclspinbox.tcl  scaleControl.tcl  selectablelist.tcl  textprompter.tcl  tkutils.tcl  transientLabel.xml
main/base/tcpip/: CSocket.cpp  CSocket.h  CTCPNoSuchHost.h  Makefile.am  Tcp.xml
main/base/thread/: CBufferQueue.cpp  CBufferQueue.h  CCondition.cpp  CCondition.h  CGaurdedObject.cpp  CGaurdedObject.h  CMutex.cpp  CMutex.h  CSynchronizedThread.h  Makefile.am  SyncGuard.cpp  SyncGuard.h  Thread.h  dshwrappthreads.h  thread.xml
main/base/uri/: URL.xml
main/caendigitizers/: Makefile.am  Readme.txt  caendigitizers.xml
main/caendigitizers/caendump/: Makefile.am  caendump.cpp
main/caendigitizers/dpp-pha/: CAENPha.cpp  CAENPha.h  CAENPhaBuffer.cpp  CAENPhaBuffer.h  CAENPhaParameters.h  CompassEventSegment.cpp  CompassEventSegment.h  CompassMaker.cpp  CompassMultiModuleEventSegment.cpp  CompassMultiModuleEventSegment.h  CompassProject.cpp  CompassTrigger.cpp  CompassTrigger.h  Makefile.am  PHAEventSegment.cpp  PHAEventSegment.h  PHATrigger.h
main/caendigitizers/dpp-psd/: CCompoundTrigger.h  CDPpPsdEventSegment.cpp  CDPpPsdEventSegment.h  CPSDMaker.cpp  CPSDMaker.h  CPsdCompoundEventSegment.cpp  CPsdCompoundEventSegment.h  CompassMixedBuilder.h  Makefile.am  PSDParameters.cpp  PSDParameters.h
main/caendigitizers/tweaker/: Makefile.am  phasettings.xml  psdsettings.xml  tweaker.tcl
main/caenfw-common/: CAENComm.h  CAENComm_Common.cpp  flash.h
main/cookbooks/: Makefile.am  cookbook.xml
main/cookbooks/process/: process.cpp  processor.cpp  processor.h
main/cookbooks/readrings/: Makefile  readrings.cpp
main/cookbooks/writerings/: Makefile  writerings.cpp
main/daq/: Makefile.am
main/daq/IO/: CDataSink.h  CDataSource.h  CFileDataSource.cpp  CLoggingDataSink.cpp  CRingDataSource.h  CTestSourceSink.h  Makefile.am
main/daq/actions/: Actions.cpp  Makefile.am  actions.tcl  actions.test  actions.xml  defaultActions.tcl  tclTests.tcl
main/daq/evbtools/: Makefile.am
main/daq/eventbuilder/: BarrierAbortCommand.cpp  BarrierAbortCommand.h  CBarrierStats.h  CBarrierStatsCommand.cpp  CBarrierStatsCommand.h  CBarrierTraceCommand.h  CCompleteBarrierCallback.h  CConfigure.cpp  CConfigure.h  CDLateStatsCommand.h  CDataLateStatistics.h  CDeadSourceCommand.h  CDropSourcesCommand.h  CDuplicateTimeStatCommand.h  CEVBClientApp.h  CEVBFrameworkApp.h  CEventOrderClient.cpp  CEventOrderClient.h  CFlushCommand.h  CFragWriter.h  CFragmentHandler.cpp  CFragmentHandler.h  CFragmentHandlerCommand.cpp  CFragmentHandlerCommand.h  CInputStatsCommand.cpp  CInputStatsCommand.h  CLateScriptObserver.h  COnLateDataCommand.h  COrdererOutput.cpp  COrdererOutput.h  COutOfOrderStatsCommand.cpp  COutOfOrderStatsCommand.h  COutOfOrderTraceCommand.h  COutputStatsCommand.cpp  COutputStatsObserver.cpp  COutputStatsObserver.h  COutputThread.cpp  COutputThread.h  CPartialBarrierCallback.cpp  CPartialBarrierCallback.h  (+61 more)
main/ddas/: Makefile.am  config_pixie16api.h
main/docbuild/: Makefile.am  chapter2book.py  docbuilder.tcl
main/epics/: Makefile.am
main/examples/: Makefile.am  examples.xml
main/m4/: ax_boost_log.m4  pyqt.m4
main/sbs/: Makefile.am
main/servers/: Makefile.am
main/tclhttpd3.5.1/: Makefile  config.cache  config.status  crypt_pkgIndex.tcl  limit_pkgIndex.tcl
main/usb/: Makefile.am
main/utilities/: Makefile.am
(+1907 files in other folders)
