ifeq(@XIAAPI_VERSION@, 2)
	SUBDIRS=configuration xiatest booter format ddasdumper nscope readout sorter readoutdriver pixieplugin simple_setups dumpsetfile xml/tinyxml xml tclconfig qtscope
else
	SUBDIRS=configuration xiatest booter format ddasdumper nscope readout sorter readoutdriver pixieplugin simple_setups tclconfig qtscope
endif


# readout-extclock - external clock handling is subsumed into readout.
# traiter - legacy trace iterator class. Not installed for now.
