


SUBDIRS = 				common	\
					daqstart \
					dvdburn \
					sequencer \
                                        Buffer \
                                        format \
                                        IO \
					FormattedIO \
					filter \
					conversion \
					ringselector \
					eventlog \
					bufdump	\
					sclclient \
					tkbufdump \
					compatibility \
					newscaler	\
					fileanalyzer	\
                                        scalerReader \
					scalersum reglom  \
					swtrigger

# scalerdisplay - removed in favor of newscaler

