


SUBDIRS = 				common	\
					daqstart \
					dvdburn \
					sequencer \
                                        Buffer \
                                        format \
					FormattedIO \
					filter \
					conversion \
					ringselector \
					eventlog \
					bufdump	\
					sclclient \
					tkbufdump \
					compatibility \
					newscaler	\
					fileanalyzer	\
                                        scalerReader \
					scalersum reglom  \
					swtrigger \
					logbook \
					manager \
					readoutREST

# scalerdisplay - removed in favor of newscaler

